# lambda-forestcovers

./: .gitignore  Dockerfile  README.md  hello.py  lambda_function.py  pyproject.toml
.github/: deploy-lambda.yml
.github/workflows/: deploy-lambda.yml
src/: processor.py
